@@ -1,11 +1,14 @@
 package net.zhuruoling.omms.controller.fabric.mixin;
 
-import com.mojang.brigadier.exceptions.CommandSyntaxException;
+
+import net.minecraft.nbt.NbtCompound;
 import net.minecraft.network.ClientConnection;
+import net.minecraft.network.MessageType;
 import net.minecraft.server.MinecraftServer;
 import net.minecraft.server.PlayerManager;
 import net.minecraft.server.network.ServerPlayerEntity;
 import net.minecraft.text.Text;
+import net.zhuruoling.omms.controller.fabric.config.ConstantStorage;
 import org.apache.logging.log4j.Logger;
 import org.spongepowered.asm.mixin.Final;
 import org.spongepowered.asm.mixin.Mixin;
@@ -16,6 +19,8 @@ import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
 
 import java.util.Objects;
 
+import static net.zhuruoling.omms.controller.fabric.util.Util.getPlayerInWhitelists;
+
 
 @Mixin(PlayerManager.class)
 public class PlayerReadyMixin {
@@ -25,14 +30,11 @@ public class PlayerReadyMixin {
 
     @Inject(method = "onPlayerConnect",at = @At("RETURN"))
     private void onPlayerConnect(ClientConnection connection, ServerPlayerEntity player, CallbackInfo ci){
-        Objects.requireNonNull(player.getServer()).getCommandManager().execute(player.getCommandSource(),"say o/");
-        var commandManager = Objects.requireNonNull(player.getServer()).getCommandManager();
-        try {
-            commandManager.getDispatcher().execute(String.format("execute as %s at @s run say o/", player.getName().asString()),server.getCommandSource());
-            //player.sendMessage(Texts.join(ServerEntryTextFactory.generateServerEntryText("a","b",true),Texts.toText(() -> "")), false);
-        } catch (CommandSyntaxException e) {
-            player.sendMessage(Text.of(String.valueOf(e)),false);
-            LOGGER.error("Cannot execute /menu command.",e);
-        }
+        String url = "http://%s:%d/whitelist/queryAll/%s".formatted(ConstantStorage.getHttpQueryAddress(), ConstantStorage.getHttpQueryPort(),player.getName().asString());
+        String result = getPlayerInWhitelists(url);
+        NbtCompound compound = new NbtCompound();
+        compound.putString("servers", result);
+        Objects.requireNonNull(player.getServer()).getCommandManager().execute(player.getCommandSource(),"/menu %s".formatted(compound.asString()));
+        server.getPlayerManager().broadcast(Text.of("<%s> o/".formatted(player.getName().asString())), MessageType.CHAT, player.getUuid());
     }
 }
